--- a/TareaMVVMByMarvinMMM/TareaMVVMByMarvinMMM/TareaMVVMByMarvinMMM.csproj
+++ b/TareaMVVMByMarvinMMM/TareaMVVMByMarvinMMM/TareaMVVMByMarvinMMM.csproj
@@ -11,7 +11,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MvvmLightLibs" Version="5.4.1.1" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Models\" />
+    <Folder Include="ViewModels\" />
+    <Folder Include="Views\" />
   </ItemGroup>
 </Project>
