--- a/TareaMVVMByMarvinMMM/TareaMVVMByMarvinMMM/TareaMVVMByMarvinMMM.csproj
+++ b/TareaMVVMByMarvinMMM/TareaMVVMByMarvinMMM/TareaMVVMByMarvinMMM.csproj
@@ -26,6 +26,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="Views\AgregarEmpleadoPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\EmpleadosPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
