Diseño de EditarEmpleadoPage

--- a/TareaMVVMByMarvinMMM/TareaMVVMByMarvinMMM/TareaMVVMByMarvinMMM.csproj
+++ b/TareaMVVMByMarvinMMM/TareaMVVMByMarvinMMM/TareaMVVMByMarvinMMM.csproj
@@ -29,6 +29,9 @@
     <EmbeddedResource Update="Views\AgregarEmpleadoPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\EditarEmpleadoPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\EmpleadosPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
